<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cz.hashiri.harshlands</groupId>
    <artifactId>harshlands-parent</artifactId>
    <version>1.3.2</version>
    <packaging>pom</packaging>

    <name>Harshlands</name>
    <description>The RLCraft Experience for Spigot/Paper | Thirst, Temperature, RPG and More</description>
    <url>https://github.com/Hashiri/Harshlands</url>

    <modules>
        <module>harshlands-api</module>
        <module>core</module>
        <module>spigot_impl_1_21_R11</module>
        <module>spigot_impl_26_1_R1</module>
        <module>dist</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

</project>
